Update z-index from header to avoid conflicts with Modal

--- a/src/static/sass/header/_header.scss
+++ b/src/static/sass/header/_header.scss
@@ -14,7 +14,7 @@
   top: 0;
   user-select: none;
   width: 100%;
-  z-index: 99999;
+  z-index: 1039;
 
   h1, h2, h3, h4, h5 {
     font-family: $fontHeading;
